@@ -1,6 +1,7 @@
-Changes with melon 2.3.2                                          28 Apr 2022
+Changes with melon 2.3.2                                          29 Apr 2022
     *) Fixed warnings on gcc 11.x and mingw
     *) Added path hook
+    *) Added log hook
     *) Updated docs
 
 Changes with melon 2.3.1                                          18 Apr 2022
